Analizador.java
/* Generated By:JavaCC: Do not edit this line. Analizador.java */
/** Analizador */
    public class Analizador implements AnalizadorConstants {
        public static void main(String[] args) throws ParseException{
            Analizador anLex = new Analizador (System.in);
            anLex.inicio();
            }

  final public void inicio() throws ParseException {
    trace_call("inicio");
    try {
      label_1:
      while (true) {
        Program();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case INT:
        case FLOAT:
        case CHAR:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(0);
    } finally {
      trace_return("inicio");
    }
  }

  final public void Program() throws ParseException {
    trace_call("Program");
    try {
      declaration_List();
    } finally {
      trace_return("Program");
    }
  }

  final public void declaration_List() throws ParseException {
    trace_call("declaration_List");
    try {
      declaration();
      declaration_ListP();
    } finally {
      trace_return("declaration_List");
    }
  }

  final public void declaration_ListP() throws ParseException {
    trace_call("declaration_ListP");
    try {
      label_2:
      while (true) {
        if (jj_2_1(5)) {
          ;
        } else {
          break label_2;
        }
        declaration();
        declaration_ListP();
      }
    } finally {
      trace_return("declaration_ListP");
    }
  }

  final public void fun_declaration() throws ParseException {
    trace_call("fun_declaration");
    try {
      type_specifier();
      jj_consume_token(ID);
      jj_consume_token(ABRIRPAR);
      params();
      jj_consume_token(CERRARPAR);
      compound_stmt();
    } finally {
      trace_return("fun_declaration");
    }
  }

  final public void declaration() throws ParseException {
    trace_call("declaration");
    try {
      if (jj_2_2(3)) {
        var_declaration();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case INT:
        case FLOAT:
        case CHAR:
          fun_declaration();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("declaration");
    }
  }

  final public void var_declaration() throws ParseException {
    trace_call("var_declaration");
    try {
      type_specifier();
      jj_consume_token(ID);
      var_declaration2();
    } finally {
      trace_return("var_declaration");
    }
  }

  final public void var_declaration2() throws ParseException {
    trace_call("var_declaration2");
    try {
      if (jj_2_3(3)) {
        jj_consume_token(FINLINEA);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ABRIRCOR:
          jj_consume_token(ABRIRCOR);
          jj_consume_token(NUMENT);
          jj_consume_token(CERRARCOR);
          jj_consume_token(FINLINEA);
          break;
        case FINLINEA:
        case COMA:
          rec_id();
          jj_consume_token(FINLINEA);
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("var_declaration2");
    }
  }

  final public void rec_id() throws ParseException {
    trace_call("rec_id");
    try {
      label_3:
      while (true) {
        if (jj_2_4(5)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMA);
        jj_consume_token(ID);
        rec_id();
      }
    } finally {
      trace_return("rec_id");
    }
  }

  final public void type_specifier() throws ParseException {
    trace_call("type_specifier");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        break;
      case FLOAT:
        jj_consume_token(FLOAT);
        break;
      case CHAR:
        jj_consume_token(CHAR);
        break;
      case VOID:
        jj_consume_token(VOID);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("type_specifier");
    }
  }

  final public void params() throws ParseException {
    trace_call("params");
    try {
      if (jj_2_5(5)) {
        param_list();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
          jj_consume_token(VOID);
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("params");
    }
  }

  final public void param_list() throws ParseException {
    trace_call("param_list");
    try {
      param();
      param_listP();
    } finally {
      trace_return("param_list");
    }
  }

  final public void param_listP() throws ParseException {
    trace_call("param_listP");
    try {
      label_4:
      while (true) {
        if (jj_2_6(5)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMA);
        param();
        param_listP();
      }
    } finally {
      trace_return("param_listP");
    }
  }

  final public void param() throws ParseException {
    trace_call("param");
    try {
      type_specifier();
      jj_consume_token(ID);
      param2();
    } finally {
      trace_return("param");
    }
  }

  final public void param2() throws ParseException {
    trace_call("param2");
    try {
      label_5:
      while (true) {
        if (jj_2_7(5)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(ABRIRCOR);
        jj_consume_token(CERRARCOR);
      }
    } finally {
      trace_return("param2");
    }
  }

  final public void compound_stmt() throws ParseException {
    trace_call("compound_stmt");
    try {
      jj_consume_token(ABRIRLLA);
      local_declarations();
      statement_list();
      jj_consume_token(CERRARLLA);
    } finally {
      trace_return("compound_stmt");
    }
  }

  final public void local_declarations() throws ParseException {
    trace_call("local_declarations");
    try {
      local_declarationsP();
    } finally {
      trace_return("local_declarations");
    }
  }

  final public void local_declarationsP() throws ParseException {
    trace_call("local_declarationsP");
    try {
      label_6:
      while (true) {
        if (jj_2_8(5)) {
          ;
        } else {
          break label_6;
        }
        var_declaration();
      }
    } finally {
      trace_return("local_declarationsP");
    }
  }

  final public void statement_list() throws ParseException {
    trace_call("statement_list");
    try {
      statement_listP();
    } finally {
      trace_return("statement_list");
    }
  }

  final public void statement_listP() throws ParseException {
    trace_call("statement_listP");
    try {
      label_7:
      while (true) {
        if (jj_2_9(5)) {
          ;
        } else {
          break label_7;
        }
        statement();
      }
    } finally {
      trace_return("statement_listP");
    }
  }

  final public void statement() throws ParseException {
    trace_call("statement");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR:
      case NUMERODECIMAL:
      case ID:
      case NUMENT:
      case FINLINEA:
      case ABRIRPAR:
        expression_stmt();
        break;
      case ABRIRLLA:
        compound_stmt();
        break;
      case IF:
        selection_stmt();
        break;
      case WHILE:
        iteration_stmt();
        break;
      case RETURN:
        return_stmt();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("statement");
    }
  }

  final public void expression_stmt() throws ParseException {
    trace_call("expression_stmt");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR:
      case NUMERODECIMAL:
      case ID:
      case NUMENT:
      case ABRIRPAR:
        expression();
        jj_consume_token(FINLINEA);
        break;
      case FINLINEA:
        jj_consume_token(FINLINEA);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("expression_stmt");
    }
  }

  final public void selection_stmt() throws ParseException {
    trace_call("selection_stmt");
    try {
      jj_consume_token(IF);
      jj_consume_token(ABRIRPAR);
      expression();
      jj_consume_token(CERRARPAR);
      statement();
      selection_stmt2();
    } finally {
      trace_return("selection_stmt");
    }
  }

  final public void selection_stmt2() throws ParseException {
    trace_call("selection_stmt2");
    try {
      label_8:
      while (true) {
        if (jj_2_10(5)) {
          ;
        } else {
          break label_8;
        }
        jj_consume_token(ELSE);
        statement();
      }
    } finally {
      trace_return("selection_stmt2");
    }
  }

  final public void iteration_stmt() throws ParseException {
    trace_call("iteration_stmt");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(ABRIRPAR);
      expression();
      jj_consume_token(CERRARPAR);
      statement();
    } finally {
      trace_return("iteration_stmt");
    }
  }

  final public void return_stmt() throws ParseException {
    trace_call("return_stmt");
    try {
      jj_consume_token(RETURN);
      return_stmt2();
    } finally {
      trace_return("return_stmt");
    }
  }

  final public void return_stmt2() throws ParseException {
    trace_call("return_stmt2");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FINLINEA:
        jj_consume_token(FINLINEA);
        break;
      case CHAR:
      case NUMERODECIMAL:
      case ID:
      case NUMENT:
      case ABRIRPAR:
        expression();
        jj_consume_token(FINLINEA);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("return_stmt2");
    }
  }

  final public void expression() throws ParseException {
    trace_call("expression");
    try {
      if (jj_2_11(5)) {
        var();
        jj_consume_token(IGUAL);
        expression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CHAR:
        case NUMERODECIMAL:
        case ID:
        case NUMENT:
        case ABRIRPAR:
          simple_expression();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("expression");
    }
  }

  final public void var() throws ParseException {
    trace_call("var");
    try {
      jj_consume_token(ID);
      var2();
    } finally {
      trace_return("var");
    }
  }

  final public void var2() throws ParseException {
    trace_call("var2");
    try {
      label_9:
      while (true) {
        if (jj_2_12(5)) {
          ;
        } else {
          break label_9;
        }
        jj_consume_token(ABRIRCOR);
        expression();
        jj_consume_token(CERRARCOR);
      }
    } finally {
      trace_return("var2");
    }
  }

  final public void simple_expression() throws ParseException {
    trace_call("simple_expression");
    try {
      additive_expression();
      simple_expression2();
    } finally {
      trace_return("simple_expression");
    }
  }

  final public void simple_expression2() throws ParseException {
    trace_call("simple_expression2");
    try {
      label_10:
      while (true) {
        if (jj_2_13(5)) {
          ;
        } else {
          break label_10;
        }
        relop();
        additive_expression();
      }
    } finally {
      trace_return("simple_expression2");
    }
  }

  final public void relop() throws ParseException {
    trace_call("relop");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MENORIGUAL:
        jj_consume_token(MENORIGUAL);
        break;
      case MENORQUE:
        jj_consume_token(MENORQUE);
        break;
      case MAYORQUE:
        jj_consume_token(MAYORQUE);
        break;
      case MAYORIGUAL:
        jj_consume_token(MAYORIGUAL);
        break;
      case IGUALIGUAL:
        jj_consume_token(IGUALIGUAL);
        break;
      case DIFERENTEDE:
        jj_consume_token(DIFERENTEDE);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("relop");
    }
  }

  final public void additive_expression() throws ParseException {
    trace_call("additive_expression");
    try {
      term();
      additive_expressionP();
    } finally {
      trace_return("additive_expression");
    }
  }

  final public void additive_expressionP() throws ParseException {
    trace_call("additive_expressionP");
    try {
      label_11:
      while (true) {
        if (jj_2_14(5)) {
          ;
        } else {
          break label_11;
        }
        addop();
        term();
        additive_expressionP();
      }
    } finally {
      trace_return("additive_expressionP");
    }
  }

  final public void addop() throws ParseException {
    trace_call("addop");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAS:
        jj_consume_token(MAS);
        break;
      case MENOS:
        jj_consume_token(MENOS);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("addop");
    }
  }

  final public void term() throws ParseException {
    trace_call("term");
    try {
      factor();
      termP();
    } finally {
      trace_return("term");
    }
  }

  final public void termP() throws ParseException {
    trace_call("termP");
    try {
      label_12:
      while (true) {
        if (jj_2_15(5)) {
          ;
        } else {
          break label_12;
        }
        mulop();
        factor();
        termP();
      }
    } finally {
      trace_return("termP");
    }
  }

  final public void mulop() throws ParseException {
    trace_call("mulop");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case POR:
        jj_consume_token(POR);
        break;
      case ENTRE:
        jj_consume_token(ENTRE);
        break;
      case MODULO:
        jj_consume_token(MODULO);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("mulop");
    }
  }

  final public void call() throws ParseException {
    trace_call("call");
    try {
      jj_consume_token(ID);
      jj_consume_token(ABRIRPAR);
      args();
      jj_consume_token(CERRARPAR);
    } finally {
      trace_return("call");
    }
  }

  final public void factor() throws ParseException {
    trace_call("factor");
    try {
      if (jj_2_16(20)) {
        jj_consume_token(ABRIRPAR);
        expression();
        jj_consume_token(CERRARPAR);
      } else if (jj_2_17(20)) {
        var();
      } else if (jj_2_18(20)) {
        call();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUMENT:
          jj_consume_token(NUMENT);
          break;
        case NUMERODECIMAL:
          jj_consume_token(NUMERODECIMAL);
          break;
        case CHAR:
          jj_consume_token(CHAR);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("factor");
    }
  }

  final public void args() throws ParseException {
    trace_call("args");
    try {
      label_13:
      while (true) {
        if (jj_2_19(5)) {
          ;
        } else {
          break label_13;
        }
        arg_list();
      }
    } finally {
      trace_return("args");
    }
  }

  final public void arg_list() throws ParseException {
    trace_call("arg_list");
    try {
      expression();
      arg_listP();
    } finally {
      trace_return("arg_list");
    }
  }

  final public void arg_listP() throws ParseException {
    trace_call("arg_listP");
    try {
      label_14:
      while (true) {
        if (jj_2_20(5)) {
          ;
        } else {
          break label_14;
        }
        jj_consume_token(COMA);
        expression();
        arg_listP();
      }
    } finally {
      trace_return("arg_listP");
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }
